--- a/ssoClient/Views/Home/Index.cshtml
+++ b/ssoClient/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+   
+    <h3><a href="/client/main" target="_self">进入会员中心</a></h3>
 </div>
