--- a/ssotest/Views/SSO/Login.cshtml
+++ b/ssotest/Views/SSO/Login.cshtml
@@ -14,8 +14,8 @@
     <div>
             <span style="color:red;">@this.ViewData["msg"] </span>
     </div>
-    <div> 
-        <input type="submit"  value="登陆" />
+    <div>
+            <input type="submit" value="登入" />
     </div>
 </div>
 
