--- a/ssotest/Views/_ViewImports.cshtml
+++ b/ssotest/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using ssotest
-@using ssotest.Models
+﻿@using ssoCenter
+@using ssoCenter.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
