演示程序,验证jumptoken完成

--- a/ssoClient/Views/Client/Main.cshtml
+++ b/ssoClient/Views/Client/Main.cshtml
@@ -5,6 +5,6 @@
 @{
 }
 <div><a target="_self" href="@($"{ConfigOption.DefaultConfig.CenterDomain}/sso/logout?backurl={ConfigOption.DefaultConfig.CurrentDomain}")">退出</a></div>
-<h3>欢迎 @ViewBag.User.Name,你终于登入进来了.</h3>
+<h3>欢迎 @ViewBag.User.Account,你终于登入进来了.</h3>
 
 
