客户端续期

--- a/ssoClient/Views/Client/Main.cshtml
+++ b/ssoClient/Views/Client/Main.cshtml
@@ -4,7 +4,7 @@
 *@
 @{
 }
-<div><a target="_self" href="@($"{ConfigOption.DefaultConfig.CenterDomain}/sso/logout?backurl={ConfigOption.DefaultConfig.CurrentDomain}")">退出</a></div>
+<div><a target="_self" href="@($"{ConfigOption.DefaultConfig.CenterDomain}/sso/logout?jumpUrl={ConfigOption.DefaultConfig.CurrentDomain}")">退出</a></div>
 <h3>欢迎 @ViewBag.User.Account,你终于登入进来了.</h3>
 
 
